--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.8.6",
+    "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
 }
