--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fcm-node": "^1.6.1",
+    "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
