--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,11 @@ web_modules/
 .env.production.local
 .env.local
 
+# firebase 
+
+firebase-config.json
+
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
