--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "razorpay": "^2.8.6",
+    "redis": "^4.6.7",
     "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
